<resources>
    <string name="app_name">Antisocial Network</string>
    <string name="main_toolbar_title">Posts</string>
    <string name="comments_toolbar_title">Comments</string>
    <string name="create_post_title">New Post</string>

    <string name="input_username_hint">Username</string>
    <string name="input_title_hint">Title</string>
    <string name="input_body_hint">Body</string>

    <string name="btn_post">Post</string>

    <string name="internet_error_message">No internet connection!</string>
    <string name="not_found_error_message">No user with such username!</string>
</resources>
